Grouped all ML models in single notebook

--- a/BaseModel_Classification_FFNN.ipynb
+++ b/BaseModel_Classification_FFNN.ipynb
@@ -42,7 +42,7 @@
     "\n",
     "commons = utils.Commons()\n",
     "ts_helper = utils.TS_Helper()\n",
-    "ts_helper.model_type = ts_helper.Classification\n",
+    "ts_helper.model_type = ts_helper.Classification # Always set this variable to the type of model you are building\n",
     "shap_helper = utils.Shap_Helper()\n",
     "\n",
     "os.environ[\"TF_CPP_MIN_LOG_LEVEL\"] = \"2\""
@@ -533,7 +533,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.12 | packaged by conda-forge | (main, Mar 24 2022, 23:18:12) [MSC v.1929 64 bit (AMD64)]"
   },
   "vscode": {
    "interpreter": {
