--- a/BaseModel_Regression_FFNN.ipynb
+++ b/BaseModel_Regression_FFNN.ipynb
@@ -41,7 +41,7 @@
     "from utils import utils\n",
     "commons = utils.Commons()\n",
     "ts_helper = utils.TS_Helper()\n",
-    "ts_helper.model_type = ts_helper.Regression\n",
+    "ts_helper.model_type = ts_helper.Regression # Always set this variable to the type of model you are building\n",
     "shap_helper = utils.Shap_Helper()\n",
     "\n",
     "os.environ[\"TF_CPP_MIN_LOG_LEVEL\"] = \"2\""
@@ -591,7 +591,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.12 | packaged by conda-forge | (main, Mar 24 2022, 23:18:12) [MSC v.1929 64 bit (AMD64)]"
   },
   "vscode": {
    "interpreter": {
