--- a/BaseModel_Regression_MPNN.ipynb
+++ b/BaseModel_Regression_MPNN.ipynb
@@ -41,7 +41,7 @@
     "\n",
     "commons = utils.Commons()\n",
     "ts_helper = utils.TS_Helper()\n",
-    "ts_helper.model_type = ts_helper.Regression\n",
+    "ts_helper.model_type = ts_helper.Regression # Always set this variable to the type of model you are building\n",
     "shap_helper = utils.Shap_Helper() \n",
     "   \n",
     "os.environ[\"TF_CPP_MIN_LOG_LEVEL\"] = \"2\""
