--- a/MI_FFNN_regression.ipynb
+++ b/MI_FFNN_regression.ipynb
@@ -312,7 +312,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "AI",
    "language": "python",
    "name": "python3"
   },
@@ -326,11 +326,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9 (tags/v3.10.9:1dd9be6, Dec  6 2022, 20:01:21) [MSC v.1934 64 bit (AMD64)]"
+   "version": "3.9.12 | packaged by conda-forge | (main, Mar 24 2022, 23:18:12) [MSC v.1929 64 bit (AMD64)]"
   },
   "vscode": {
    "interpreter": {
-    "hash": "f0b86550ea44597804204a48b6097d9d9fddb827366e03432e7a68bfbd6f6c1c"
+    "hash": "305c663c06086012150402cb542001f2c1c554dcd7eca29927fc1d739b83f0a9"
    }
   }
  },
